homelab/apps/zigbee2mqtt/base/resources/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zigbee2mqtt
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    spec:
      nodeSelector:
        z2m: usb
      containers:
        - name: zigbee2mqtt
          image: koenkk/zigbee2mqtt:2.8.0
          imagePullPolicy: IfNotPresent
          securityContext:
            privileged: true
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          livenessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 0
            failureThreshold: 3
            timeoutSeconds: 1
            periodSeconds: 10
          readinessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 0
            failureThreshold: 3
            timeoutSeconds: 1
            periodSeconds: 10
          startupProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 0
            failureThreshold: 30
            timeoutSeconds: 1
            periodSeconds: 5
          volumeMounts:
            - name: zigbee2mqtt-udev
              mountPath: /run/udev
            - name: ttyusb
              mountPath: /dev/ttyUSB0
            - name: zigbee2mqtt-data
              mountPath: /data
            - name: zigbee2mqtt-config
              mountPath: /data/configuration_default.yaml
              subPath: configuration.yaml
          lifecycle:
            postStart:
              exec:
                command: ["cp", "/data/configuration_default.yaml", "/data/configuration.yaml"]
      volumes:
        - name: zigbee2mqtt-data
          persistentVolumeClaim:
            claimName: zigbee2mqtt-data
        - name: zigbee2mqtt-udev
          hostPath:
            path: /run/udev
        - name: ttyusb
          hostPath: 
            path: /dev/ttyUSB0
        - name: zigbee2mqtt-config
          configMap:
            name: zigbee2mqtt-config
